# helloric_ui_com

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  compose.yml  docker-compose.yml  entrypoint.bash  requirements.txt  run.bash  setup.py  test.bash
.github/workflows/: build_and_push_docker_images.yml
helloric_ui_com/: cli.py  main.py  package.xml  ros_com.py  setup.cfg  setup.py
helloric_ui_com/helloric_ui_com/: main.py  ros_com.py  utils.py
helloric_ui_com/integration_tests/helloric_ui_com_test/: README.md  package.xml  setup.cfg  setup.py
helloric_ui_com/integration_tests/helloric_ui_com_test/helloric_ui_com_test/: emotion_publisher.py
helloric_ui_com/integration_tests/helloric_ui_com_test/src/: emotion_publisher.py
helloric_ui_com/integration_tests/launch_testing/: com_launch_test.py
helloric_ui_com/test/: com_launch_test.py
integration_tests/helloric_ui_com_test/: setup.py
integration_tests/helloric_ui_com_test/helloric_ui_com_test/: emotion_publisher.py
integration_tests/launch_testing/: com_launch_test.py
