<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>helloric_ui_com_test</name>
  <version>0.0.1</version>
  <description>Send emotion and speaking using rclpy.</description>

  <maintainer email="andreas.bresser@dfki.de">Andreas Bresser</maintainer>

  <license>BSD-3</license>

  <author email="andreas.bresser@dfki.de">Andreas Bresser</author>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- These test dependencies are optional
  Their purpose is to make sure that the code passes the linters -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>